actix-web-codegen/tests/trybuild/route-unexpected-method-fail.stderr
error: Unexpected HTTP method: `UNEXPECTED`
 --> tests/trybuild/route-unexpected-method-fail.rs:3:21
  |
3 | #[route("/", method="UNEXPECTED")]
  |                     ^^^^^^^^^^^^

error[E0277]: the trait bound `fn() -> impl std::future::Future<Output = String> {index}: HttpServiceFactory` is not satisfied
   --> tests/trybuild/route-unexpected-method-fail.rs:12:55
    |
12  |     let srv = actix_test::start(|| App::new().service(index));
    |                                               ------- ^^^^^ the trait `HttpServiceFactory` is not implemented for `fn() -> impl std::future::Future<Output = String> {index}`
    |                                               |
    |                                               required by a bound introduced by this call
    |
note: required by a bound in `App::<T>::service`
   --> $WORKSPACE/actix-web/src/app.rs
    |
    |         F: HttpServiceFactory + 'static,
    |            ^^^^^^^^^^^^^^^^^^ required by this bound in `App::<T>::service`
